game working, not styled yet, and wins/losses can stack after game is over

--- a/index.html
+++ b/index.html
@@ -12,6 +12,24 @@
     <h1>Number to Guess: <span id="number-to-guess"></span></h1>
     <div id="crystals"></div>
 
+    <div id="current-number">Current Number: 0</div>
+    <div id="wins-losses">
+      <div id="wins">wins: 0</div>
+      <div id="losses">losses: 0</div>
+      <button id="new-game">New Game</button>
+    </div>
+    <div id="instructions">
+      <p>
+        Your goal is to match the number shown at the top of the screen by
+        clicking the crystals.
+      </p>
+
+      <p>
+        Each crystal has a different value assigned to it. When you win or lose,
+        click the New Game button to play again!
+      </p>
+    </div>
+
     <!-- javascript always goes at the bottom! -->
     <script
       type="text/javascript"
