--- a/index.html
+++ b/index.html
@@ -12,26 +12,28 @@
     <header>
       <h1>Number to Guess: <span id="number-to-guess"></span></h1>
     </header>
-    <div id="crystals"></div>
+    <div id="wrapper">
+      <div id="crystals"></div>
 
-    <div id="current-number">Current Number: 0</div>
-    <div id="wins-losses">
-      <div id="wins">wins:</div>
-      <div id="win-count">0</div>
-      <div id="losses">losses:</div>
-      <div id="loss-count">0</div>
-      <button id="new-game">New Game</button>
-    </div>
-    <div id="instructions">
-      <p>
-        Your goal is to match the number shown at the top of the screen by
-        clicking the crystals.
-      </p>
+      <div id="current-number">Current Number: 0</div>
+      <div id="wins-losses">
+        <div id="wins">Wins:</div>
+        <div id="win-count">0</div>
+        <div id="losses">Losses:</div>
+        <div id="loss-count">0</div>
+        <button id="new-game">New Game</button>
+      </div>
+      <div id="instructions">
+        <p>
+          Your goal is to match the number shown at the top of the screen by
+          clicking the crystals.
+        </p>
 
-      <p>
-        Each crystal has a different value assigned to it. When you win or lose,
-        click the New Game button to play again!
-      </p>
+        <p>
+          Each crystal has a different value assigned to it. When you win or
+          lose, click the New Game button to play again!
+        </p>
+      </div>
     </div>
     <!-- javascript always goes at the bottom! -->
     <script
